# swift-tools-protocols

./: .editorconfig  .licenseignore  CMakeLists.txt  CONTRIBUTING.md  Package.swift  README.md
.github/: CODEOWNERS
.github/scripts/: prebuild.ps1  prebuild.sh
.github/workflows/: pull_request.yml
Plugins/cmake-smoke-test/: cmake-smoke-test.swift
Sources/: CMakeLists.txt  _ToolsProtocolsSwiftExtensionsForPlugin
Sources/BuildServerProtocol/: CMakeLists.txt  Messages.swift
Sources/BuildServerProtocol/Messages/: BuildTargetPrepareRequest.swift  BuildTargetSourcesRequest.swift  InitializeBuildRequest.swift  OnBuildLogMessageNotification.swift  OnBuildTargetDidChangeNotification.swift  RegisterForChangeNotifications.swift  TaskFinishNotification.swift  TaskStartNotification.swift  TextDocumentSourceKitOptionsRequest.swift  WorkspaceWaitForBuildSystemUpdates.swift
Sources/BuildServerProtocol/SupportTypes/: BuildTarget.swift  MessageType.swift  StatusCode.swift
Sources/LanguageServerProtocol/: CMakeLists.txt  Connection.swift  Error.swift  MessageRegistry.swift  Messages.swift  PositionRange.swift  RequestID.swift
Sources/LanguageServerProtocol/Notifications/: DidChangeActiveDocumentNotification.swift  LogMessageNotification.swift  WorkDoneProgress.swift
Sources/LanguageServerProtocol/Requests/: CodeActionRequest.swift  ColorPresentationRequest.swift  CompletionRequest.swift  DoccDocumentationRequest.swift  DocumentColorRequest.swift  DocumentDiagnosticsRequest.swift  DocumentHighlightRequest.swift  DocumentSemanticTokensDeltaRequest.swift  DocumentSymbolRequest.swift  DocumentTestsRequest.swift  GetReferenceDocumentRequest.swift  HoverRequest.swift  InlayHintRequest.swift  InlineValueRequest.swift  IsIndexingRequest.swift  OutputPathsRequest.swift  PeekDocumentsRequest.swift  SetOptionsRequest.swift  SignatureHelpRequest.swift  SourceKitOptionsRequest.swift  SynchronizeRequest.swift  TriggerReindexRequest.swift  WorkspaceDiagnosticsRequest.swift  WorkspacePlaygroundsRefreshRequest.swift  WorkspacePlaygroundsRequest.swift  WorkspaceSymbolInfoRequest.swift  WorkspaceSymbolNamesRequest.swift  WorkspaceSymbolsRequest.swift  WorkspaceTestsRefreshRequest.swift  WorkspaceTestsRequest.swift
Sources/LanguageServerProtocol/SupportTypes/: ClientCapabilities.swift  CompletionItem.swift  Diagnostic.swift  FileSystemWatcher.swift  InlayHint.swift  LSPAny+Coding.swift  LSPAny.swift  Location.swift  LocationLink.swift  LocationsOrLocationLinksResponse.swift  NotebookCellTextDocumentFilter.swift  Playground.swift  Position.swift  ProgressToken.swift  RegistrationOptions.swift  SemanticTokenModifiers.swift  SemanticTokens.swift  ServerCapabilities.swift  StringOrMarkupContent.swift  SupportedCodeLensCommand.swift  TextDocumentContentChangeEvent.swift  TextDocumentEdit.swift  TextDocumentIdentifier.swift  TextDocumentPlayground.swift  TextDocumentSaveReason.swift  TextEdit.swift  Tracing.swift  WindowMessageType.swift  WorkspaceEdit.swift  WorkspaceSettings.swift
Sources/LanguageServerProtocolTransport/: BuildServerMessageDependencyTracker.swift  CMakeLists.txt  Connection+Send.swift  DisableSigpipe.swift  DocumentURI+CustomLogStringConvertible.swift  JSONRPCConnection.swift  LegacyNameFallbackConnection.swift  LocalConnection.swift  LoggableMessageTypes.swift  MessageCoding.swift  MessageSplitting.swift  QueueBasedMessageHandler.swift  RequestAndReply.swift  ResponseError+Init.swift
Sources/SKLogging/: CMakeLists.txt  CustomLogStringConvertible.swift  Error+ForLogging.swift  Logging.swift  LoggingScope.swift  NonDarwinLogging.swift  OrLog.swift  SetGlobalLogFileHandler.swift  SplitLogMessage.swift
Sources/SwiftExtensions/: Array+Safe.swift  AsyncQueue.swift  CMakeLists.txt  Cache.swift  Collection+Only.swift  Collection+PartitionIntoBatches.swift  FileManagerExtensions.swift  LazyValue.swift  Platform.swift  Process+terminate.swift  ResultExtensions.swift  Sequence+AsyncMap.swift  Task+WithPriorityChangedHandler.swift  TransitiveClosure.swift  URLExtensions.swift
Sources/ToolsProtocolsCAtomics/: CMakeLists.txt
Sources/ToolsProtocolsCAtomics/include/: ToolsProtocolsCAtomics.h  module.modulemap
Sources/ToolsProtocolsSwiftExtensions/: AsyncQueue.swift  AsyncUtils.swift  Atomics.swift  CMakeLists.txt  Collection+Only.swift  Duration+Seconds.swift  FileManagerExtensions.swift  PipeAsStringHandler.swift  RefBox.swift  Task+WithPriorityChangedHandler.swift  ThreadSafeBox.swift  URLExtensions.swift
Sources/ToolsProtocolsTestSupport/: Assertions.swift  CheckCoding.swift  PerfTestCase.swift  RepeatUntilExpectedResult.swift  TestJSONRPCConnection.swift
Tests/BuildServerProtocolTests/: CodingTests.swift
Tests/LanguageServerProtocolTests/: CodingTests.swift  ConnectionTests.swift  LSPAnyCodingTests.swift
Tests/LanguageServerProtocolTransportTests/: CodingTests.swift  ConnectionPerfTests.swift  ConnectionTests.swift  LegacyNameFallbackConnectionTests.swift  MessageParsingTests.swift
Tests/SKLoggingTests/: LoggingTests.swift  PrettyPrintedRedactedJSONTests.swift
Tests/SwiftExtensionsTests/: AsyncUtilsTests.swift  ResultExtensionsTests.swift
Tests/ToolsProtocolsSwiftExtensionsTests/: AsyncQueueTests.swift  AsyncUtilsTests.swift  RefBoxTests.swift
cmake/modules/: CMakeLists.txt  SwiftToolsProtocolsConfig.cmake.in
